--- a/index.css
+++ b/index.css
@@ -388,14 +388,8 @@ margin: -15px 16px;
 
 @media(max-width: 420px){
 
-    .triangle {
-        width: 300px;
-      height: 184px;
-      
-      opacity: 1;
-      position: relative;
-      top: 0px;
-      left: 0px;  
+    .triangle2 {
+    width: 300px;
     }
 
 }
