--- a/index.css
+++ b/index.css
@@ -400,4 +400,62 @@ margin: -15px 16px;
     top: 38px;
     }
 
+    body{
+        width: max-content;
+    }
+
+    .print2 {
+        position: relative;
+        width: 4px;
+        height: 792px;
+        background: #FFFFFF;
+        margin: auto;
+    }
+
+    .experience{
+        display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    
+    position: absolute;
+    width: 359px;
+    height: 366px;
+    left: 30px;
+    top: 206px;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        position: absolute;
+        width: 85px;
+        height: 48px;
+        left: 32px;
+        top: 138px;
+        flex: none;
+        order: 1;
+        align-self: stretch;
+        flex-grow: 0;
+        margin: 0px 16px;
+        font-family: Inter;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 8px;
+        line-height: 14px;
+        color: #646464;
+        }
+
+        .firstlast{
+            position: absolute;
+            width: 85px;
+            height: 15px;
+            left: 0px;
+            top: 0px;
+            font-family: Inter;
+            font-weight: bold;
+            font-size: 12px;
+            }
 }
