--- a/index.css
+++ b/index.css
@@ -421,7 +421,7 @@ margin: -15px 16px;
     position: absolute;
     width: 359px;
     height: 366px;
-    left: 30px;
+    left: 5px;
     top: 206px;
     }
 
@@ -433,7 +433,7 @@ margin: -15px 16px;
         position: absolute;
         width: 85px;
         height: 48px;
-        left: 32px;
+        left: 5px;
         top: 138px;
         flex: none;
         order: 1;
@@ -452,10 +452,23 @@ margin: -15px 16px;
             position: absolute;
             width: 85px;
             height: 15px;
-            left: 0px;
+            left: -25px;
             top: 0px;
             font-family: Inter;
             font-weight: bold;
             font-size: 12px;
+            }
+            .edublock {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 0px;
+                
+                position: absolute;
+                width: 371px;
+                height: 118px;
+                left: 6px;
+                top: 592px;
+                
             }
 }
